Completed Ambasador ID generation

--- a/application/views/ambassador/generateId.html
+++ b/application/views/ambassador/generateId.html
@@ -1,17 +1,17 @@
 <section class="container">
     <div class="row">
         <h1 class="page-header text-center">Generate Your Id</h1>
-        {if($success)}
-        <div class="alert alert-success alert-dismissible fade in" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-            Saved <strong>Successfully!</strong>
-        </div>
-        <p>Your Id has been created. Save by right click on image</p>
-        <p><img src="/ambassador/createId/{$college}/{$filename}" width="200"></p>
+        {if($photo != "")}
+            <div class="alert alert-success alert-dismissible fade in" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+                Created <strong>Successfully!</strong>
+            </div>
+            <p>Your Id has been created. Save by right click on image</p>
+            <p><img src="/ambassador/createId/{$college}/{$photo->id}" width="200"></p>
         {/if}
         {else}
         <div class="col-md-offset-2 col-lg-8">
-            <form class="form-horizontal" method="post" action=""  enctype="multipart/form-data">
+            <form class="form-horizontal" method="post" action="/ambassador/generateId" enctype="multipart/form-data">
                 <div class="form-group">
                     <label>College Name</label>
                     <select class="form-control" required="" name="college">
@@ -25,6 +25,7 @@
                     <input type="file" name="file" class="form-control">
                     <span class="help-text">The Image size should be 265 by 265 and type PNG</span>
                 </div>
+                <input type="hidden" name="action" value="generateId">
                 <button type="submit" class="btn btn-success pull-right">Create Id <i class="fa fa-check-circle fa-fw"></i></button>
             </form>
         </div>
