--- a/application/views/onlinetest/addques.html
+++ b/application/views/onlinetest/addques.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header text-center">Add Questions for Test</h1>
+            <h2 class="page-heading">Test: {echo $test->title}</h2>
             {if isset($success)}
             <div class="alert alert-success alert-dismissible fade in" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
