--- a/application/views/home/index.html
+++ b/application/views/home/index.html
@@ -82,6 +82,7 @@
                     <div class="list-group">
                         <a href="/home?location=delhi" class="list-group-item">Internship in Delhi</a>
                         <a href="/home?location=mumbai" class="list-group-item">Internship in Mumbai</a>
+                        <a href="http://placementboat.org" target="_blank" class="list-group-item">Placement Papers</a>
                     </div>
                 </div>
                 
