--- a/application/views/training/index.html
+++ b/application/views/training/index.html
@@ -30,7 +30,7 @@
                                     <div class="thumbnail">
                                         <a href="/training/details/{echo \Framework\StringMethods::url($training->title)}/{echo $training->id}"><img src="/onlinetest/photo/{echo $training->id}" alt="{echo $training->title}" width="100"></a>
                                         <div class="caption">
-                                            <p><b>{echo substr($training->title, 0, 21)}</b></p>
+                                            <p><small>{echo substr($training->title, 0, 21)}</small></p>
                                             <p>
                                                 <a href="/training/details/{echo \Framework\StringMethods::url($training->title)}/{echo $training->id}" class="btn btn-primary btn-xs">Details</a> 
                                             </p>
