--- a/application/views/training/quick_apply.html
+++ b/application/views/training/quick_apply.html
@@ -23,7 +23,7 @@
             <div class="modal-footer">
                 <input type="hidden" name="quickApply" value="quickApply">
                 <input type="hidden" name="action" value="register">
-                <button type="submit" class="btn btn-primary"><i class="fa fa-check-circle"></i> Apply</button>
+                <button type="submit" class="btn btn-primary"><i class="fa fa-check-circle"></i> Register</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </form>
