--- a/application/views/internship/quick_apply.html
+++ b/application/views/internship/quick_apply.html
@@ -21,8 +21,8 @@
                     <input type="email" name="email" class="form-control" placeholder="Email Address" required="">
                 </div>
                 <div class="form-group">
-                    <label>Phone (Optional)</label>
-                    <input type="tel" name="phone" class="form-control" placeholder="Primary Phone">
+                    <label>Phone</label>
+                    <input type="tel" name="phone" class="form-control" placeholder="Primary Phone" required="">
                     <span class="help-text">Companies may contact you directly</span>
                 </div>
                 {/if}
