--- a/application/views/layouts/student.html
+++ b/application/views/layouts/student.html
@@ -29,21 +29,22 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     
-    <script src="http://tinymce.cachefly.net/4.1/tinymce.min.js"></script>
+    <script src="/public/assets/plugins/tinymce/tinymce.min.js"></script>
     <script type="text/javascript">
-    tinymce.init({
-        selector: ".editor",
-        plugins: [
-            "advlist autolink lists link image charmap print preview anchor",
-            "searchreplace visualblocks code fullscreen",
-            "insertdatetime media table contextmenu"
-        ],
-        toolbar: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
-        autosave_ask_before_unload: false,
-        max_height: 200,
-        min_height: 160,
-        height : 180
-    })
+        tinymce.init({
+            selector: ".editor",
+            plugins: [
+                "advlist autolink lists link image charmap print preview anchor",
+                "searchreplace visualblocks code fullscreen",
+                "insertdatetime media table contextmenu jbimages"
+            ],
+            toolbar: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image media jbimages",
+            autosave_ask_before_unload: false,
+            max_height: 200,
+            min_height: 160,
+            height: 180,
+            relative_urls: false
+        });
     </script>
 
     <!-- fav and touch icons -->
