--- a/application/views/layouts/navigation/public.html
+++ b/application/views/layouts/navigation/public.html
@@ -17,6 +17,7 @@
                 <li><a href=""></a></li>
                 <li><a href="/resume-for-internship" class="whitetext"><i class="fa fa-file-text-o fa-lg"></i> Create Resume</a></li>
                 <li><a href="/onlinetest" class="whitetext hidden-sm"><i class="fa fa-clock-o fa-lg"></i> Certification Test</a></li>
+                <li><a href="/training" class="whitetext hidden-sm"><i class="fa fa-black-tie fa-lg"></i> Workshops</a></li>
             </ul>
             <!-- the menu -->
             <div class="navbar-right">
