--- a/application/views/training/edit.html
+++ b/application/views/training/edit.html
@@ -32,6 +32,10 @@
                             <td><textarea class="form-control editor" name="details">{echo $training->details}</textarea></td>
                         </tr>
                         <tr>
+                            <td><b>Duration</b></td>
+                            <td><input type="text" class="form-control" name="duration" value="{echo $training->duration}"></td>
+                        </tr>
+                        <tr>
                             <td><b>Fees</b></td>
                             <td><input type="text" class="form-control" name="payment" value="{echo $training->payment}"></td>
                         </tr>
