--- a/application/views/layouts/admin.html
+++ b/application/views/layouts/admin.html
@@ -6,7 +6,7 @@
         
         <!-- Core CSS - Include with every page -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 
         <!-- Plugin CSS  -->
