Test Panel Updated
Now we can add questions and their options in text format as well as
picture format

--- a/application/views/layouts/navigation/admin.html
+++ b/application/views/layouts/navigation/admin.html
@@ -55,7 +55,7 @@
             </li>
             <li><a href="/marketing/sponsored"><i class="fa fa-bullhorn fa-fw"></i> Sponsored</a></li>
             <li>
-                <a href="#"><i class="fa fa-area-chart fa-fw"></i> Test<span class="fa arrow"></span></a>
+                <a href="#"><i class="fa fa-codepen fa-fw"></i> Test<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li><a href="/onlinetest/create">Create</a></li>
                     <li><a href="/onlinetest/manage">Manage</a></li>
