--- a/application/views/onlinetest/manage.html
+++ b/application/views/onlinetest/manage.html
@@ -21,7 +21,7 @@
                             <td>{echo $test->subject}</td>
                             <td>{echo $test->created}</td>
                             <td>
-                                <a href="/onlinetest/addques/{$test->id}" class="btn btn-success btn-xs"><i class="fa fa-fax"></i> Add Questions </a>&nbsp;
+                                <a href="/onlinetest/viewTestQues/{$test->id}" class="btn btn-success btn-xs"><i class="fa fa-object-ungroup"></i> Edit Questions </a>&nbsp;
                                 <a href="/onlinetest/edit/{$test->id}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Edit </a>&nbsp;
                             </td>
                         </tr>
