--- a/application/views/onlinetest/addOptions.html
+++ b/application/views/onlinetest/addOptions.html
@@ -1,85 +1,89 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header text-center">Add Options for the question</h1>
-            <h2 class="page-heading">Ques: {echo $ques->question}</h2>
+            <h3><a href="/onlinetest/viewTestQues/{echo $ques->test_id}" class="text-left"><i class="fa fa-arrow-left"></i> Back</a></h3>
+            <h1 class="page-header text-center">Add Options</h1>
+            <span class="pull-right"><a href="#" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Edit </a></span>
+            <h2 class="page-heading">Ques <i class="fa fa-question"></i> : {echo $ques->question}</h2>
             {if isset($success)}
             <div class="alert alert-success alert-dismissible fade in" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
                 Options Added <strong>Successfully! Go to Test/Manage to add more questions</strong>
             </div><br>
             {/if}
+            <br />
+            <h4 class="page-heading"><i class="fa fa-bars"></i> Previously Added Options</h4>
+            <!-- Previously added Options -->
+            <div class="panel panel-default">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>S.No.</th>
+                            <th>Option</th>
+                            <th>Type</th>
+                            <th>Is-Ans?</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {script $i = 1}
+                        {foreach $opt in $savedOpts}
+                        <tr>
+                            <td>{echo $i}</td>
+                            <td>{echo $opt->ques_option}</td>
+                            <td>{echo $opt->type}</td>
+                            <td>
+                                {if ($opt->is_answer == 1)}
+                                    Yes
+                                {/if}
+                                {else}
+                                    No
+                                {/else}
+                            </td>
+                            <td>
+                                {if ($opt->type != "image")}
+                                    <a href="/onlinetest/editOption/{echo $opt->id}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Edit </a>&nbsp;
+                                {/if}
+                            </td>
+                        </tr>
+                        {script $i++}
+                        {/foreach}
+                    </tbody>
+                </table>
+            </div>
+            
+            <h4 class="page-heading"><i class="fa fa-plus"></i> Add More?</h4>
             <form method="post" action="" id="addOptions" enctype="multipart/form-data">
                 <div class="panel panel-default panel-body">
-                    <p>Option-1</p>
+                    <h4 class="page-heading"><i class="fa fa-list-ul"></i> Option</h4>
                     <div class="form-group">
                         <label>Type *</label>
-                         <select class="form-control" name="type1" required="">
+                         <select class="form-control" name="type" required="">
                             <option value="text">Text</option>
                             <option value="image">Image</option>
                         </select>
                     </div>
 
-                    <div class="form-group" id="type1">
-                        <input type="text" name="option1" class="form-control" required="">
-                        <input type="file" name="option1" class="form-control hide">
-                    </div>
+                    <div id="type">
+                        <label>Option *</label>
+                        <input type="text" name="option" class="form-control" required="">
+                        <input type="file" name="file" class="hide">
+                    </div><br />
                     
-                    <p>Option-2</p>
                     <div class="form-group">
-                        <label>Type *</label>
-                         <select class="form-control" name="type2" required="">
-                            <option value="text">Text</option>
-                            <option value="image">Image</option>
-                        </select>
+                        <label>Is Answer? *</label>
+                        <div class="radio">
+                            <label><input type="radio" name="ans" value="yes" checked="">Yes</label>
+                        </div>
+                        <div class="radio">
+                            <label><input type="radio" name="ans" value="no">No</label>
+                        </div>
+                        <span class="help-block">Is the option answer of the question?</span>
                     </div>
 
-                    <div class="form-group" id="type2">
-                        <input type="text" name="option2" class="form-control" required="">
-                        <input type="file" name="option2" class="form-control hide">
-                    </div>
-                    
-                    <p>Option-3</p>
-                    <div class="form-group">
-                        <label>Type *</label>
-                         <select class="form-control" name="type3" required="">
-                            <option value="text">Text</option>
-                            <option value="image">Image</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group" id="type3">
-                        <input type="text" name="option3" class="form-control" required="">
-                        <input type="file" name="option3" class="form-control hide">
-                    </div>
-                    
-                    <p>Option-4</p>
-                    <div class="form-group">
-                        <label>Type *</label>
-                         <select class="form-control" name="type4" required="">
-                            <option value="text">Text</option>
-                            <option value="image">Image</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group" id="type4">
-                        <input type="text" name="option4" class="form-control" required="">
-                        <input type="file" name="option4" class="form-control hide">
-                    </div>
-                    
-                    <div class="form-group">
-                        <label>Answer of the question *</label>
-                        <select class="form-control" name="answer" required="">
-                            <option value="option-1">Option-1</option>
-                            <option value="option-2">Option-2</option>
-                            <option value="option-3">Option-3</option>
-                            <option value="option-4">Option-4</option>
-                        </select>
-                        <span class="help-block">Which is the answer for the question?</span>
-                    </div>
-                    <input type="hidden" name="action" value="addOptions">
+                    <input type="hidden" name="action" value="addOption">
                     <p style="color: red; font-weight: bold;">* fields are required.</p>
-                    <button type="submit" class="btn btn-primary pull-right"><i class="fa fa-check-circle"></i> Submit</button>
+                    <button type="submit" class="btn btn-primary pull-right"><i class="fa fa-check-circle"></i> Save Option</button>
                 </div>
             </form>
 
