--- a/application/views/onlinetest/addques.html
+++ b/application/views/onlinetest/addques.html
@@ -1,8 +1,10 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header text-center">Add Questions for Test</h1>
-            <h2 class="page-heading">Test: {echo $test->title}</h2>
+            <h3><a href="/onlinetest/viewTestQues/{echo $test->id}" class="text-left"><i class="fa fa-arrow-left"></i> Back</a></h3>
+            <h1 class="page-header text-center">Add Questions</h1>
+            <span class="pull-right"><a href="/onlinetest/edit/{echo $test->id}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Edit </a></span>
+            <h2 class="page-heading">Test: <a href="/onlinetest/details/{echo urlencode($test->title)}/{echo $test->id}" target="_blank" >{echo $test->title}</a></h2>
             {if isset($success)}
             <div class="alert alert-success alert-dismissible fade in" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
@@ -24,8 +26,6 @@
                             <option value="file">File</option>
                         </select>
                     </div>
-
-                    <div class="form-group" id="options"></div>
                     
                     <input type="hidden" name="action" value="addQues">
                     <p style="color: red; font-weight: bold;">* fields are required.</p>
