Mail Error Solved

--- a/application/views/users/emails/employerApplicants.html
+++ b/application/views/users/emails/employerApplicants.html
@@ -14,4 +14,4 @@ Saud Akhtar<br>
 Marketing Head Swiftintern.com<br>
 +91-9891048495<br>
 <br>
-We're on <a href="https://www.facebook.com/swiftintern">Facebook</a> and <a href="https://twitter.com/swiftintern">Twitter</a> giving you the latest tips, news & internships.
+We are on <a href="https://www.facebook.com/swiftintern">Facebook</a> and <a href="https://twitter.com/swiftintern">Twitter</a> giving you the latest tips, news & internships.
