--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -130,7 +130,8 @@
             <p>
                 <a href="https://github.com/SwiftMVC/SwiftMVC" target="_blank" class="whitetext btn btn-success btn-xs"><i class="fa fa-heart-o fa-fw"></i> Made with SwiftMVC</a>
                 <span class="pull-right">
-                    <a href="http://www.swiftdeal.org/" target="_blank" class="whitetext"><i class="fa fa-copyright fa-fw"></i> SwiftDeal Online LLP.</a>
+                    <a href="http://www.swiftdeal.org/" target="_blank" class="whitetext"><i class="fa fa-copyright fa-fw"></i> SwiftDeal Online LLP</a> | 
+                    <a href="http://www.cloudstuffs.com/" target="_blank" class="whitetext"><i class="fa fa-code fa-fw"></i> CloudStuffs</a>
                 </span>
             </p>
             <p class="text-center">
