Added Training Certification Method

--- a/application/views/training/manage.html
+++ b/application/views/training/manage.html
@@ -24,6 +24,7 @@
                                 <a href="{echo $meta->meta_value}" target="_blank" class="btn btn-primary btn-xs"><i class="fa fa-linkedin"></i></a>&nbsp;
                                 <a href="/training/applications/{$training->id}" class="btn btn-success btn-xs"><i class="fa fa-fax"></i> Applications </a>&nbsp;
                                 <a href="/training/edit/{$training->id}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Edit </a>&nbsp;
+                                <a href="/training/certificates/{$training->id}" class="btn btn-info btn-xs"><i class="fa fa-fax"></i> Certificates </a>&nbsp;
                             </td>
                         </tr>
                         {/foreach}
