--- a/application/views/training/post.html
+++ b/application/views/training/post.html
@@ -62,7 +62,7 @@
                     <div class="form-group">
                         <label>Fees *</label>
                         <input type="text" class="form-control" name="payment">
-                        <span class="help-block">{echo Shared\Markup::errors($errors, "payment")}</span>
+                        <span class="help-block">{echo Shared\Markup::errors($errors, "payment")}Enter Only Numbers</span>
                     </div>
 
                     <div class="form-group">
