--- a/application/views/layouts/navigation/public.html
+++ b/application/views/layouts/navigation/public.html
@@ -8,13 +8,12 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- Be sure to leave the brand out there if you want it shown -->
-            <a class="navbar-brand" href="/"><i class="fa fa-graduation-cap fa-lg"></i> SwiftIntern</a>
+            <a href="/"><img src="{echo CDN}images/l.png" alt="LOGO" width="50" height="50"></a>
         </div>
 
         <!-- post or upload cv -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                <li><a href=""></a></li>
                 <li><a href="/resume-for-internship" class="whitetext"><i class="fa fa-file-text-o fa-lg"></i> Create Resume</a></li>
                 <li><a href="/onlinetest" class="whitetext hidden-sm"><i class="fa fa-clock-o fa-lg"></i> Certification Test</a></li>
                 <li><a href="/training" class="whitetext hidden-sm"><i class="fa fa-black-tie fa-lg"></i> Workshops</a></li>
