--- a/application/views/layouts/navigation/public.html
+++ b/application/views/layouts/navigation/public.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- Be sure to leave the brand out there if you want it shown -->
-            <a href="/"><img src="{echo CDN}images/l.png" alt="LOGO" width="50" height="50"></a>
+            <a href="/" class="whitetext"><img src="{echo CDN}images/new-logo-small.png" alt="Swiftintern Logo" width="50" height="50"> Swiftintern</a>
         </div>
 
         <!-- post or upload cv -->
